# fyp-multi-sensor-recording-system

./: .aiignore  .flake8  .gitignore  .gitmodules  .markdownlint.json  .output.txt  .pre-commit-config.yaml  .vale.ini  4K_SCREENSHOTS_README.md  =13.1  ACADEMIC_CALIBRATION_ANALYSIS.md  ACADEMIC_RECORDING_CONTROLLER_ANALYSIS.md  ACADEMIC_RESEARCH_SUMMARY.md  ACADEMIC_SHIMMER_CONTROLLER_ANALYSIS.md  ANDROID_TESTING_README.md  ARCHITECTURE_ASSESSMENT_REPORT.md  ARCHITECTURE_REFACTORING_SUMMARY.md  CALIBRATION_CONTROLLER_IMPLEMENTATION.md  CAMERA_PREVIEW_README.md  CHANGELOG.md  CHAPTER5_TESTING_SUMMARY.md  CHAPTER6_EVALUATION_GUIDE.md  CI_STATUS_REPORT.md  COMPLETENESS_REPORT.md  COMPLETE_HARMONIZATION_SUMMARY.md  COMPLETE_THESIS_DOCUMENTATION.md  COMPREHENSIVE_ARCHITECTURE.md  COMPREHENSIVE_DOCUMENTATION_ANALYSIS.md  COMPREHENSIVE_IMPROVEMENTS_SUMMARY.md  COMPREHENSIVE_SHIMMER_IMPLEMENTATION_ANALYSIS.md  COMPREHENSIVE_TEST_IMPLEMENTATION.md  COMPREHENSIVE_UI_TESTING_SUMMARY.md  CONSOLIDATION_COMPLETE.json  CONTEXT_AND_LITERATURE_REVIEW.md  CONTRIBUTOR_GUIDE.md  COVERAGE_ANALYSIS.md  CROSS_PLATFORM_DESIGN_GUIDE.md  DATA_COLLECTION_GUIDELINES.md  DESIGN_AND_IMPLEMENTATION.md  DETEKT_CONFIGURATION_CHANGES.md  (+224 more)
.github/: copilot-instructions.md  dependabot.yml
.junie/: guidelines.md
AndroidApp/: ANDROID_TESTING_GUIDE.md  COMPOSE_MIGRATION_SUMMARY.md  README.md  SHIMMER_MANAGER_ACADEMIC_DOCUMENTATION.md  SHIMMER_MANAGER_ENHANCEMENT.md  build.gradle  build.gradle.kts  google-services.json  proguard-rules.pro  run_comprehensive_android_tests.sh  validate_shimmer_integration.sh
PythonApp/: CHAPTER3_TEST_EXECUTION_REPORT.md  COMPLETE_TEST_RESULTS_AND_LOGS_SUMMARY.md  DUAL_WEBCAM_IMPLEMENTATION.md  ENHANCED_UI_DOCUMENTATION.md  README.md  README_Chapter3_Tests.md  README_ENHANCED_UI.md  README_Enhanced_Visualizations.md  RECORDING_SESSION_TEST_README.md  __init__.py  application.py  build.gradle  calibration_quality_assessment.py  chapter3_mermaid_diagrams.md  chapter3_test_results_summary.md  chapter3_unified_results.json  comprehensive_system_test.py  cross_device_calibration_coordinator.py  demo_enhanced_ui.py  demonstrate_logging.py  enhanced_main_with_web.py  generate_enhanced_playback_screenshots.py  generate_enhanced_test_visualizations.py  generate_playback_queue_screenshots.py  hand_segmentation_cli.py  launch_dual_webcam.py  main.py  master_clock_synchronizer.py  multi_sensor_system.py  ntp_time_server.py  performance_optimizer.py  phase4_validation_report_20250731_022445.json  real_time_calibration_feedback.py  run_app.sh  run_chapter3_tests_unified_json_mermaid.py  run_chapter3_tests_with_visualization.py  run_chapter3_unified.py  run_complete_test_suite.py  run_comprehensive_tests.py  run_quick_recording_session_test.py  (+40 more)
audit_reports/: tech_debt_audit_20250806_065729.md  tech_debt_audit_20250806_073148.md  tech_debt_audit_20250806_073559.md  tech_debt_audit_20250806_073949.md  tech_debt_audit_20250806_074653.json  tech_debt_audit_20250806_074700.md  tech_debt_audit_20250806_224525.md  tech_debt_audit_20250806_224938.json  tech_debt_audit_20250806_224959.json  tech_debt_audit_20250806_225224.md  tech_debt_audit_20250806_225336.json  tech_debt_audit_20250806_225537.md
bucika_gsr/: README.md  application.py  calibration_quality_assessment.py  demo_enhanced_ui.py  hand_segmentation_cli.py  main.py  master_clock_synchronizer.py  performance_optimizer.py  shimmer_manager.py  shimmer_pc_app.py  stimulus_manager.py
calibration_data/: README.md
data/: README.md
docs/: 01_Multi_Device_Synchronization_System_Comprehensive.md  02_Android_Mobile_Application_Comprehensive.md  03_Camera_Recording_System_Comprehensive.md  04_Python_Desktop_Controller_Comprehensive.md  05_Shimmer3_GSR_Plus_Integration_Comprehensive.md  06_Thermal_Camera_Integration_TopDon_TC001_Comprehensive.md  07_UI_Architecture_Comprehensive.md  08_Testing_QA_Framework_Comprehensive.md  09_Stimulus_Management_System_Comprehensive.md  10_Hand_Segmentation_System_Comprehensive.md  11_Master_Clock_Synchronizer_Comprehensive.md  16kb-page-size-compliance.md  2_2_milestone.md  ACADEMIC_QA_WORKFLOW.md  ANDROID_MOBILE_APPLICATION_COMPREHENSIVE_REPORT.md  ANDROID_SCREENSHOT_AUTOMATION.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_MAINTENANCE.md  Advanced-Testing-Framework-Guide.md  BEST_PRACTICES_EVOLUTION_FRAMEWORK.md  CAMERA_RECORDING_SYSTEM_AND_STAGE3_RAW_EXTRACTION.md  COPILOT_ACADEMIC_WRITING.md  CRASH_FIXES.md  CROSS_CUTTING_CONCERNS.md  DATA_STORAGE_QUICK_REFERENCE.md  DATA_STRUCTURE_DOCUMENTATION.md  DEPENDENCY_INJECTION_GUIDELINES.md  DEPENDENCY_RISK_ASSESSMENT.md  DIAGRAM_GENERATION_SUMMARY.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_QUALITY_ASSESSMENT.md  DeviceClient_Protocol.md  FILE_NAMING_STANDARDS.md  FINAL_PHASE_DIAGRAM_GENERATION_SUMMARY.md  FIREBASE_ANALYTICS_DASHBOARDS.md  FIREBASE_INTEGRATION.md  FIREBASE_INTEGRATION_ENHANCED.md  FIREBASE_PRODUCTION_SETUP.md  HEADLESS_OPERATION.md  (+98 more)
(+2246 files in other folders)
