# pyproject.toml - Modern Python project configuration
# Configuration for tools: Black, isort, mypy, bandit, coverage

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermal-recording-system"
version = "1.0.0"
description = "Multi-Sensor Synchronized Recording System"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Tran Duy An", email = "an.tran.20@ucl.ac.uk" }
]
keywords = ["thermal", "recording", "sensors", "android", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "PyQt5>=5.15.11",
    "opencv-python>=4.12.0",
    "numpy>=1.26.0,<2.0.0",  # Keep v1.x for OpenCV compatibility
    "matplotlib>=3.10.0",
    "requests>=2.32.0",
    "pillow>=10.4.0",
    "scipy>=1.14.0",
    "pandas>=2.2.0",
    "websockets>=13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=5.0.0",
    "black>=25.1.0",
    "isort>=5.13.0",
    "mypy>=1.17.0",
    "bandit>=1.8.0",
    "pre-commit>=4.0.0",
    "flake8>=7.3.0",
]
shimmer = [
    "pyshimmer>=1.0.0",  # Optional Shimmer SDK
    "pybluez>=0.23",     # Optional Bluetooth support
    "bleak>=0.22.0",     # Modern async Bluetooth
]
calibration = [
    "opencv-contrib-python>=4.12.0",  # Extended OpenCV features
]
android = [
    "adb-shell>=0.5.0",   # Android device communication
    "pure-python-adb>=0.3.0",  # Pure Python ADB implementation
]

[project.urls]
Homepage = "https://github.com/buccancs/bucika_gsr"
Repository = "https://github.com/buccancs/bucika_gsr.git"
Issues = "https://github.com/buccancs/bucika_gsr/issues"

# Black code formatting configuration
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | env
  | venv
)/
'''

# isort import sorting configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["thermal_recording"]
known_third_party = ["PyQt5", "cv2", "numpy", "matplotlib", "requests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# MyPy type checking configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Ignore missing imports for external libraries
[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "PyQt5.*",
    "matplotlib.*",
    "numpy.*",
]
ignore_missing_imports = true

# Bandit security linting configuration
[tool.bandit]
exclude_dirs = ["tests", "test_*", "*/tests/*"]
skips = ["B101", "B601"]  # Skip assert_used and shell=True warnings for tests

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]

# Coverage configuration
[tool.coverage.run]
source = ["PythonApp/src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/venv/*",
    "*/env/*",
    "*/.tox/*",
    "*/site-packages/*",
    "*/build/*",
    "*/dist/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# Pytest configuration (alternative to pytest.ini)
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=PythonApp/src",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=50",
    "--junitxml=junit.xml",
]
testpaths = ["PythonApp/tests", "PythonApp/src/tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance benchmarks",
    "security: marks tests as security validation tests",
    "gui: marks tests that require GUI components",
    "network: marks tests that require network connectivity",
    "hardware: marks tests that require physical hardware",
]